--- a/package.json
+++ b/package.json
@@ -17,10 +17,11 @@
     "noble"
   ],
   "dependencies": {
-    "express": "^4.18.2",
-    "bloom-filters": "^3.0.1",
     "@noble/curves": "^1.6.0",
-    "@noble/hashes": "^1.5.0"
+    "@noble/hashes": "^1.5.0",
+    "@scure/base": "^2.0.0",
+    "bloom-filters": "^3.0.1",
+    "express": "^4.18.2"
   },
   "engines": {
     "node": ">=22.0.0"
