--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
-    "dev": "node --watch server.js"
+    "dev": "node --watch server.js",
+    "build": "tsdown"
   },
   "keywords": [
     "statistics",
@@ -16,7 +17,9 @@
     "ed25519",
     "noble"
   ],
-  "dependencies": {
+  "dependencies": {},
+  "devDependencies": {
+    "tsdown": "^0.15.5",
     "@noble/curves": "^1.6.0",
     "@noble/hashes": "^1.5.0",
     "@scure/base": "^2.0.0",
