--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "start": "node server.js",
     "dev": "node --watch server.js",
-    "build": "tsdown"
+    "build-node": "tsdown"
   },
   "keywords": [
     "statistics",
